started adding connection to json file for sensors

--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ html
         $(function () {
             $('#container').highcharts({
             chart: {
-                type: 'column'
+                type: 'line'
             },
             series: [{
                 name: ["one"],
