--- a/views/index.jade
+++ b/views/index.jade
@@ -10,5 +10,10 @@ html(lang="en")
         link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', rel='stylesheet')
    body
     div#container(style="min-width: 500px; height: 500px; margin: 0 auto")
+        a(href='/')
+            span.glyphicon.glyphicon-refresh 
+        a(href='/clear')
+            span.glyphicon.glyphicon-remove
         #NameHere.GPH
+
 script(src='index.js')
